# sgw-multi-hazard-response

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Makefile  PLAN.md  README.md  docker-compose.yml  run.sh
.claude/: README.md  status.md
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_postgis_extension.py  002_operational_schema.py  003_widen_alert_id.py
backend/scripts/: docker_entrypoint.sh  generate_mock_data.py  pull_noaa_fixtures.py  seed_from_raw.py  seed_noaa_fixtures.py
backend/src/sgw_platform/: __init__.py  polling.py  settings.py
backend/src/sgw_platform/adapters/: __init__.py  coops.py  nhc.py  nws.py
backend/src/sgw_platform/alignment/: __init__.py  model.py  service.py
backend/src/sgw_platform/api/: main.py  routes.py  state.py
backend/src/sgw_platform/audit/: writer.py
backend/src/sgw_platform/db/: base.py  session.py
backend/src/sgw_platform/db/models/: __init__.py  assets.py  audit.py  field.py  graph.py  maintenance.py  operations.py  weather.py
backend/src/sgw_platform/explain/: agent.py  briefing.py  explanation.py  prompt_versions.py  provider.py  schemas.py
backend/src/sgw_platform/features/: builder.py
backend/src/sgw_platform/governance/: fairness.py
backend/src/sgw_platform/graph/: blast_radius.py  dependency.py
backend/src/sgw_platform/ingestion/: id_resolver.py
backend/src/sgw_platform/models/: anomaly.py  forecast.py  risk.py  train_all.py
backend/src/sgw_platform/observability/: logging.py  metrics.py
backend/src/sgw_platform/optimisation/: vrp.py
backend/src/sgw_platform/scenarios/: __init__.py  parser.py  report.py  runner.py  spec.py
backend/tests/evals/: conftest.py  test_llm_golden.py  test_models.py
backend/tests/integration/: conftest.py  test_ingestion_features.py  test_llm_copilot.py  test_noaa_fixtures.py  test_seed_and_schema.py
backend/tests/unit/: test_alignment.py  test_smoke.py
deliverables/: 2_Executive_Briefing.pptx  README.md
demo/: README.md  walkthrough.md
docs/: 00_working_notes.md  01_assumptions.md  02_mvp_workflow.md  03_plan.md  03_prd.md  03_prd_concise.md  04_exec_briefing.md  04_prd.md  05_architecture.md  05_exec_briefing.md  06_architecture.md  06_data_model.md  07_data_model.md  07_external_data_sources.md  08_external_data_sources.md  08_scenario_agent.md  09_design_cockpit_v2.md  09_operator_alignment.md  (+6 more)
(+76 files in other folders)
